--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,10 @@ a {
     text-decoration: none;
     color: inherit;
 }
-
+.wrap {
+    width: 100vw;
+    overflow: hidden;
+}
 button {
     background-color: transparent;
     border-style: none;
@@ -36,212 +39,6 @@ button {
     border-radius: 50%;
     top: 0;
     left: 0;
-    z-index: 9;
-}
-
-#main-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100px;
-    /* border: 2px solid black; */
-    z-index: 10;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 3rem;
-    padding: 0 5vw;
-    background-color: transparent;
-    transition: .5s;
-}
-
-#main-header.on {
-    height: 70px;
-    background-color: #CEFFAF;
-    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5);
-}
-
-#main-header .logo {
-    font-family: 'Gowun Batang', serif;
-    text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.7);
-}
-
-#main-header nav #menu {
-    display: flex;
-    font-family: 'Josefin Sans', sans-serif;
-    gap: 2vw;
-}
-
-#main-header nav #menu li.on {
-    /* color: pink; */
-
-    /* background-image: url('../images/profile.jpeg'); */
-    background: linear-gradient(blue, pink);
-    background-repeat: repeat-y;
-    background-size: cover;
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-}
-
-/* 홈섹션 시작 */
-#Home {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    background-color: #FCFFE7;
-
-    background-image: url('../images/profile.jpeg');
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
-}
-
-#Home:before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: "";
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-#Home article {
-    position: absolute;
-    right: 0;
-    top: 40vh;
-    width: 50vw;
-    height: 50vh;
-    /* outline: 2px solid red; */
-    font-size: 5rem;
-    color: #fff;
-}
-
-
-/* 홈섹션 끝 */
-
-/* about 섹션 */
-#About {
-    width: 100vw;
-    height: 200vh;
-    background-color: #CEFFAF;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-
-    /* background-image: url('../images/profile.jpeg');
-    background-size: contain;
-    background-attachment:fixed;
-    background-position: left;
-
-    clip-path: circle(27% at 65% 50%); */
-}
-#About .first-floor {
-    width: 100%;
-    display: flex;
-}
-.mask-color-filter {
-    background-color: #CEFFAF;
-}
-.profile-clip {
-    width: 50vw;
-    height: 100vh;
-
-    background-image: url('../images/profile.jpeg');
-    background-size: contain;
-    background-attachment: fixed;
-    background-position: left;
-
-    clip-path: circle(27% at 60% 50%);
-}
-
-#About .first-floor .intro {
-    width: 100vw;
-    height: 100vh;
-    /* outline: 2px solid red; */
-    color: #000;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: right;
-}
-
-#About .first-floor .intro header {
-    font-size: 4rem;
-    margin-bottom: 20px;
 
 }
 
-#About .first-floor .intro p {
-    font-size: 2rem;
-}
-#About .second-floor {
-    width: 100%;
-    display: flex;
-}
-#About .second-floor .skill-title {
-    width: 30vw;
-}
-
-
-
-/* about 섹션 끝*/
-
-/* work 섹션 */
-
-#Work {
-    width: 100vw;
-    height: 100vh;
-    background-color: #C9FFF5;
-    display: flex;
-    align-items: center;
-}
-#Work .work-list {
-    width: 20vw;
-}
-#work .workslider {
-    width: 80vw
-}
-
-
-
-
-
-
-
-
-
-
-
-.swiper {
-    width: 60vw;
-    position: relative;
-  }
-  .swiper-wrapper {
-   
-  }
-
-  .swiper-slide {
-    background-position: center;
-    background-size: cover;
-    width: 300px;
-    height: 300px;
-  }
-
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-  }
-  .swiper-pagination {
-    position: absolute;bottom: 0;
-  }
-
-/* work 섹션 끝*/
-
-#Contact {
-    width: 100vw;
-    height: 100vh;
-    background-color: pink;
-}
