--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,12 @@ html {
     scroll-behavior: smooth;
     font-family: 'Gowun Batang', serif;
     /* font-family: 'Josefin Sans', sans-serif; */
+    cursor: none;
 }
 
-body {}
+body {
+
+}
 
 ul {
     list-style-type: none;
@@ -22,23 +25,38 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
 .wrap {
     width: 100vw;
     overflow: hidden;
 }
+
 button {
     background-color: transparent;
     border-style: none;
 }
 
 .mousepointer {
+    position: fixed;
     width: 20px;
     height: 20px;
-    border: 1px solid #000;
-    position: fixed;
     border-radius: 50%;
-    top: 0;
-    left: 0;
-
+    background: #fff;
+    transition: transform 0.2s;
+    mix-blend-mode: difference;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    z-index: 11;
 }
-
+#readme {
+    width: 200px;
+    height: 30px;
+    background-color: #ccc;
+    border-radius: 10px;
+}
+#gotogit {
+    width: 200px;
+    height: 30px;
+    background-color: #ccc;
+    border-radius: 10px;
+}
