--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,7 @@ html {
     cursor: none;
 }
 
-body {
-
-}
+body {}
 
 ul {
     list-style-type: none;
@@ -48,15 +46,53 @@ button {
     pointer-events: none;
     z-index: 11;
 }
+
 #readme {
     width: 200px;
     height: 30px;
     background-color: #ccc;
     border-radius: 10px;
 }
+
 #gotogit {
     width: 200px;
     height: 30px;
     background-color: #ccc;
     border-radius: 10px;
+}
+
+
+
+
+
+
+
+
+/* ---- particles.js container ---- */
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    
+    z-index: -1;
+}
+
+/* ---- stats.js ---- */
+
+
+#stats,
+.count-particles {
+    -webkit-user-select: none;
+    margin-top: 5px;
+    margin-left: 5px;
+}
+
+#stats {
+    border-radius: 3px 3px 0 0;
+    overflow: hidden;
+}
+
+.count-particles {
+    border-radius: 0 0 3px 3px;
 }
