--- a/css/pc.css
+++ b/css/pc.css
@@ -1,3 +1,18 @@
+/* 마우스 포인터 ------------------------ */
+.mousepointer {
+    position: fixed;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #fff;
+    transition: transform 0.2s;
+    mix-blend-mode: difference;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    z-index: 11;
+}
+
+/* 헤더-------------------------------- */
 #main-header {
     position: fixed;
     top: 0;
@@ -20,32 +35,18 @@
     background-color: #CEFFAF;
     box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5);
 }
-
+    /* 헤더 로고 */
 #main-header .logo {
     font-family: 'Gowun Batang', serif;
     text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.7);
 }
-
+    /* 헤더 메뉴 */
 #main-header nav #menu {
     display: flex;
     font-family: 'Josefin Sans', sans-serif;
     gap: 2vw;
 }
-#main-header nav #menu li:last-child img{
-    width: 30px;
-}
-#main-header nav #menu li:last-child img:hover{
-    animation-name: git-rolling;
-    animation-duration: .5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-}
-@keyframes git-rolling{
-    
-    100%{
-        transform: rotate(360deg);
-    }
-}
+
 #main-header nav #menu li.on {
     /* color: pink; */
 
@@ -65,7 +66,7 @@
 
 
 
-/* 홈섹션 시작 */
+/* 홈섹션 시작 -----------------------------*/
 #Home {
     position: relative;
     width: 100vw;
@@ -102,7 +103,7 @@
 
 /* 홈섹션 끝 */
 
-/* about 섹션 */
+/* about 섹션 ------------------------------*/
 #About {
     width: 100vw;
     height: 200vh;
@@ -160,7 +161,7 @@
 #About .first-floor .intro p {
     font-size: 2rem;
 }
-
+    /* 2층 */
 #About .second-floor {
     width: 100%;
     height: 100%;
@@ -173,10 +174,12 @@
     display: flex;
     flex-direction: column;
 }
+
 #About .second-floor .skill-title ul {
     width: 100%;
     display: flex;
 }
+
 #About .second-floor .skill-title ul li img {
     width: 50px;
 }
@@ -191,7 +194,7 @@
 
 /* about 섹션 끝*/
 
-/* work 섹션 */
+/* work 섹션 ---------------------------------*/
 
 #Work {
     width: 100vw;
@@ -201,7 +204,7 @@
     align-items: center;
     position: relative;
 }
-
+    /* 워크섹션 네비게이터 */
 #Work .work-list {
     width: 20vw;
     height: 40%;
@@ -238,7 +241,7 @@
 #Work .work-list>li.on {
     color: red;
 }
-
+    /* 워크섹션 작업물  */
 #Work .work-contents {
     position: absolute;
     top: 0;
@@ -250,11 +253,9 @@
     align-items: center;
     opacity: 0;
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     transition: 0.5s;
-}
-
-#Work .work-contents .container {
-    width: 100%;
 }
 
 #Work .work-contents.hide {
@@ -269,12 +270,110 @@
     transform: translateX(0);
 }
 
-#Work .work-contents .row {
+#Work .work-contents .container {
+    margin-top: 150px;
+    width: 100%;
+    position: relative;
+}
+#Work .work-contents .container .row {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+#Work .work-contents .container .row:not(:first-child){
+    display: none;
+}
+#Work .work-contents .navigator-group {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+    /* 상세보기 레이아웃 */
+#contents-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 70vw;
+    height: 70vh;
+    background-color: #fff;
+    z-index: 10;
+}
+#contents-wrapper header {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+}
+
+#close {
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    font-size: 50px;
+}
+
+#contents-wrapper article {
+    display: flex;
+    width: 100%;
+    height: calc(100% - 70px);
+}
+
+#contents-wrapper article .left-side {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#contents-wrapper article .left-side .thumbnail {
+    width: 80%;
+    height: 100%;
+    outline: 1px solid red;
+}
+
+#contents-wrapper article .left-side .thumbnail img {
+    margin: 0 auto;
+    width: 80%;
+    display: block;
+}
+
+#contents-wrapper article .right-side {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#contents-wrapper article .right-side .work-info {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#contents-wrapper article .right-side .work-info span {
+    font-size: 1.5rem;
+}
+
+#contents-wrapper article .right-side .work-info span h2 {
+    font-size: 2.5rem;
+}
+
+#contents-wrapper article .right-side .work-info span p {
+    white-space: nowrap;
+}
+
+#contents-wrapper article .right-side .detail-btn-group {
+    width: 100%;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
 
 #Work .work-contents .con {
     width: 20vw;
@@ -300,7 +399,7 @@
     display: block;
 }
 
-
+    /* 모달창------- */
 .modal-shadow {
     position: absolute;
     width: 100vw;
@@ -417,46 +516,84 @@
     width: 100vw;
     height: 100vh;
     border: 30px solid pink;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 10rem;
     position: relative;
-z-index: 1;
+    /* z-index: 1; */
     /* background-image: url('../4907157.jpg');
     background-repeat: no-repeat;
     background-size: cover; */
 }
+
 #Contact .particle-back {
     position: absolute;
     top: 0;
     left: 0;
 }
 
+#Contact .thx {
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3rem;
+    white-space: nowrap;
+}
 
+#Contact .thx h1 {
+    margin-top: 2rem;
+    font-size: 5rem;
+}
 
-
-
-
-
-
-
-
-
-.pc-site {
-    outline: 2px solid red;
+#Contact .contact-way {
+    font-family: 'Josefin Sans', sans-serif;
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 3rem;
+    display: flex;
+    gap: 10rem;
+    text-align: center;
+}
+#Contact .contact-way a {
+    position: relative;
+    width: 10vw;
+}
+#Contact .contact-way a:after {
+    display: block;
+    content: '';
+    margin-top: 4rem;
+    border-bottom: solid 3px #000;
+    transform: scaleX(0);
+    transition: transform .5s ease-in-out;
+}
+#Contact .contact-way a:last-child:after{
+    display: none;
+}
+#Contact .contact-way > a:hover:after {
+    transform: scaleX(1);
+}
+#Contact .contact-way > a:after {
+    transform-origin: 0% 50%;
+}
+#Contact .contact-way a div {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}#Contact .contact-way a .text-hidden {
+    display: none;
 }
 
 
-.mobile-site {
-    outline: 2px solid blue;
-}
 
-.responsive {
-    outline: 2px solid yellowgreen;
-}
 
-.etc-site {
-    outline: 2px solid yellow;
-}
+
+
+
+
+
+
+
+
+
