--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@ html {
     /* font-family: 'Josefin Sans', sans-serif; */
     cursor: none;
 }
+::-webkit-scrollbar{
+    display: none;
+}
 
 body {
     background-image: linear-gradient(0deg,  rgba(44,83,131,1) 18.9%, rgba(95,175,201,1) 91.1% );
