--- a/css/pc.css
+++ b/css/pc.css
@@ -173,45 +173,63 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+#About .second-floor .bar-deco-right {
+    position: absolute;
+    top: 20vh;
+    right: 0;
+    width: 40vw;
+    height: 10vh;
+    background-color: #fff;
+}
+
+#About .second-floor .bar-deco-left{
+    position: absolute;
+    left: 0;
+    bottom: 5vh;
+    width: 70vw;
+    height: 10vh;
+    background-color: #000;
 }
 
 #About .second-floor .container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 60vw;
+    width: 70vw;
     height: 100vh;
-    padding: 200px 0;
+    padding-top: 140px;
 }
 
 #About .second-floor .container .skill-title {
     width: 100%;
     height: 10vh;
-    background-color: #fff;
     font-size: 3rem;
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 #About .second-floor .container .skill {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-top: 30px;
 }
 
 #About .second-floor .container .skill li {
     width: 20%;
     height: 45vh;
-    padding: 20px;
-    outline: 2px solid black;
+    border-radius: 15px;
+    padding: 20px ;
+    background-color: #ccc;
 }
 
 #About .second-floor .container .skill li header {
     width: 100%;
-    height: 40%;
+    /* height: 40%; */
     display: flex;
     justify-content: center;
-    outline: 2px solid black;
 }
 
 #About .second-floor .container .skill li .skill-icon {
@@ -228,10 +246,21 @@
 }
 
 #About .second-floor .container .skill li .skill-icon .progress {
+    position: relative;
     width: 50px;
     height: 50px;
+    margin-top: 15px;
+    text-align: center;
+    line-height: 50px;
     border-radius: 50%;
-    background-color: purple;
+    background-color: #fff;
+}
+#About .second-floor .container .skill li .skill-icon .progress span {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    font-weight: bold;
 }
 
 
@@ -239,12 +268,37 @@
     width: 100%;
     font-size: 2rem;
     margin-top: 20px;
+    position: relative;
+
+}
+#About .second-floor .container .skill li .skill-name:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    width: 60%;
+    height: 100%;
+
+    border-bottom: 10px solid black;
 }
 #About .second-floor .container .skill li .skill-info {
     width: 100%;
     font-size: 1.5rem;
     margin-top: 20px;
+    position: relative;
 }
+#About .second-floor .container .skill li .skill-info:after{
+    position: absolute;
+    top: 10px;
+    right: 0;
+    content: "";
+    width: 30%;
+    height: 100%;
+
+    border-bottom: 10px solid black;
+
+}
+
 
 
 /* about 섹션 끝*/
