--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ a {
 button {
     background-color: transparent;
     border-style: none;
+    cursor: pointer;
 }
 
 .github {
@@ -92,8 +93,8 @@ button {
 /* ---- particles.js container ---- */
 #particles-js {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: transparent;
     
     z-index: -1;
