--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root {
+    --main-color : #b20a2c;
+}
 
 html {
     font-size: 62.5%;
@@ -17,7 +20,8 @@ html {
 }
 
 body {
-    background-image: linear-gradient(0deg,  rgba(44,83,131,1) 18.9%, rgba(95,175,201,1) 91.1% );
+    /* background-image: linear-gradient(0deg,  rgba(44,83,131,1) 18.9%, rgba(95,175,201,1) 91.1% ); */
+    background-color: #fff;
 }
 
 ul {
@@ -60,7 +64,7 @@ button {
 #readme {
     width: 8vw;
     height: 4vh;
-    background-color: #ccc;
+    background-color: var(--main-color);
     border-radius: 10px;
 }
 #readme a {
@@ -73,7 +77,7 @@ button {
 #gotogit {
     width: 8vw;
     height: 4vh;
-    background-color: #ccc;
+    background-color: var(--main-color);
     border-radius: 10px;
 }
 #gotogit a {
