--- a/css/pc.css
+++ b/css/pc.css
@@ -34,7 +34,7 @@
     height: 70px;
     /* background-color: rgba(95, 175, 201, 1); */
     background-color: rgba(255, 255, 255, 0.7);
-    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 0 5px 5px 1px rgba(255, 255, 255, 0.7);
 }
 
 /* 헤더 로고 */
@@ -48,7 +48,7 @@
     display: flex;
     font-family: 'Josefin Sans', sans-serif;
     gap: 2vw;
-    text-shadow: 2px 2px 2px  rgba(255, 255, 255, 0.7);
+    /* text-shadow: 2px 2px 2px  rgba(255, 255, 255, 0.7); */
 }
 
 #main-header nav #menu li.on {
@@ -77,7 +77,7 @@
     height: 100vh;
     /* background-color: #FCFFE7; */
 
-    background-image: url('../images/profile.jpeg');
+    /* background-image: url('../images/profile.jpeg'); */
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -110,11 +110,11 @@
 /* about 섹션 ------------------------------*/
 #About {
     width: 100vw;
-    height: 200vh;
+    height: 100vh;
     background-color: transparent;
     position: relative;
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
 
     /* background-image: url('../images/profile.jpeg');
     background-size: contain;
@@ -132,6 +132,7 @@
 .mask-color-filter {
     /* background-color: #CEFFAF; */
     background-color: transparent;
+    
 }
 
 .profile-clip {
@@ -178,24 +179,25 @@
 }
 
 /* 2층 */
-#About .second-floor {
+.second-floor {
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    background-color: var(--main-color);
 }
-#About .second-floor .bar-deco-right {
+.second-floor .bar-deco-right {
     position: absolute;
     top: 20vh;
     right: 0;
     width: 40vw;
     height: 40px;
-    background-color: var(--main-color);
+    background-color: #fff;
 }
 
-#About .second-floor .bar-deco-left{
+.second-floor .bar-deco-left{
     position: absolute;
     left: 0;
     bottom: 8vh;
@@ -204,7 +206,7 @@
     background-color: var(--main-color);
 }
 
-#About .second-floor .container {
+.second-floor .container {
     display: flex;
     flex-direction: column;
     width: 70vw;
@@ -212,7 +214,7 @@
     padding-top: 140px;
 }
 
-#About .second-floor .container .skill-title {
+.second-floor .container .skill-title {
     width: 100%;
     height: 10vh;
     font-size: 3rem;
@@ -221,14 +223,14 @@
     position: relative;
 }
 
-#About .second-floor .container .skill {
+.second-floor .container .skill {
     width: 100%;
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
 }
 
-#About .second-floor .container .skill li {
+.second-floor .container .skill li {
     width: 20%;
     height: 45vh;
     border-radius: 15px;
@@ -236,14 +238,15 @@
     background-color: #f1f1f1;
 }
 
-#About .second-floor .container .skill li header {
+.second-floor .container .skill li header {
     width: 100%;
-    /* height: 40%; */
+    height: 40%;
     display: flex;
     justify-content: center;
+    gap: 2rem;
 }
 
-#About .second-floor .container .skill li .skill-icon {
+.second-floor .container .skill li .skill-icon {
     width: 25%;
     display: flex;
     flex-direction: column;
@@ -251,12 +254,12 @@
     align-items: center;
 }
 
-#About .second-floor .container .skill li .skill-icon img {
+.second-floor .container .skill li .skill-icon img {
     width: 100%;
     display: block;
 }
 
-#About .second-floor .container .skill li .skill-icon .progress {
+.second-floor .container .skill li .skill-icon .progress {
     position: relative;
     width: 50px;
     height: 50px;
@@ -266,7 +269,7 @@
     border-radius: 50%;
     background-color: #fff;
 }
-#About .second-floor .container .skill li .skill-icon .progress span {
+.second-floor .container .skill li .skill-icon .progress span {
     position: absolute;
     top: 0;
     left: 50%;
@@ -275,14 +278,14 @@
 }
 
 
-#About .second-floor .container .skill li .skill-name {
+.second-floor .container .skill li .skill-name {
     width: 100%;
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-top: 20px;
     position: relative;
 
 }
-#About .second-floor .container .skill li .skill-name:after {
+.second-floor .container .skill li .skill-name:after {
     position: absolute;
     top: 0;
     left: 0;
@@ -292,13 +295,14 @@
 
     border-bottom: 5px solid var(--main-color);
 }
-#About .second-floor .container .skill li .skill-info {
+.second-floor .container .skill li .skill-info {
     width: 100%;
+    height: 35%;
     font-size: 1.5rem;
     margin-top: 20px;
     position: relative;
 }
-#About .second-floor .container .skill li .skill-info:after{
+.second-floor .container .skill li .skill-info:after{
     position: absolute;
     top: 10px;
     right: 0;
