--- a/css/pc.css
+++ b/css/pc.css
@@ -186,7 +186,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    background-color: var(--main-color);
+    background-color: #f1f1f1;
 }
 .second-floor .bar-deco-right {
     position: absolute;
@@ -235,7 +235,7 @@
     height: 45vh;
     border-radius: 15px;
     padding: 20px ;
-    background-color: #f1f1f1;
+    background-color: #ddd;
 }
 
 .second-floor .container .skill li header {
@@ -326,8 +326,10 @@
     /* background-color: #C9FFF5; */
     background-color: transparent;
     display: flex;
+    flex-direction: column;
     align-items: center;
     position: relative;
+    border-bottom: 7vh solid var(--main-color);
 /* 
     border: 1px dotted var(--main-color);
     border-left: none;
@@ -336,16 +338,21 @@
 
 /* 워크섹션 네비게이터 */
 #Work .work-list {
-    width: 20vw;
-    height: 100%;
-    padding: 25vh 0 ;
+    /* width: 20vw; */
+    /* height: 100%; */
+    padding: 0 10vw;
+    padding-top: 100px;
     font-size: 2rem;
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: space-between;
     align-items: center;
-    /* background-color: var(--main-color); */
+    background-color: var(--main-color);
     /* box-shadow: 10px 0 5px var(--main-color); */
+
+    width: 100vw;
+    height: 20%;
+    z-index: 9;
 }
 
 #Work .work-list>li {
@@ -373,28 +380,17 @@
 }
 
 #Work .work-list>li.on {
-    color: #000;
+    color: red;
 }
 
 /* 워크섹션 작업물  */
 #Work .work-contents {
     position: absolute;
-    top: 0;
-    left: 20vw;
-    width: 80vw;
-    height: 100%;
-    padding: 0 5vw;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    top: 10%;
+    left: 0;
+    width: 100vw;
     transition: 0.5s;
-    /* border: 20px solid var(--main-color); */
-    border-left: none;
-    border-right: none;
-    background-color: var(--main-color);
+    opacity: 0;
 }
 
 #Work .work-contents.hide {
@@ -568,24 +564,22 @@
     background-size: cover; */
 }
 
-#Contact .particle-back {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
 #Contact .thx {
     position: absolute;
-    text-align: center;
+    width: 80vw;
+    height: 20vh;
+    border: 2px solid red;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
     font-size: 3rem;
-    white-space: nowrap;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 #Contact .thx h1 {
-    margin-top: 2rem;
     font-size: 5rem;
 }
 
